# Hakaton2023

./: Cargo.toml  index.php
lib/css/: main.css
lib/module/: inc-menu.php
lib/module/home/: inc-home-carousel.php
src/: app_frame.rs  component.rs  lib.rs  library.rs  main.rs  menu.rs  test.rs
src/component/: config.rs  site.rs
src/component/site/: api.rs  user.rs
src/structures/: mod.rs  view.rs
src/test/: forklift.rs
